--- a/date/2025-11/index.htm
+++ b/date/2025-11/index.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-16-free-node-subscribe-links.htm" title="「12月16日」最高速度22.2M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「12月16日」最高速度22.2M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-node-share.htm" title="「12月2日」最高速度18.5M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「12月2日」最高速度18.5M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-shadowrocket-node.htm" title="「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" title="「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-27-clash-node.htm" title="「11月27日」最高速度20.4M/S，2025年Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接">「11月27日」最高速度20.4M/S，2025年Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-13-free-high-speed-nodes.htm" title="「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-subscribe-node.htm" title="「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-7-free-node-subscribe-links.htm" title="「12月7日」最高速度22.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月7日」最高速度22.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-20-clash-node-daily-updates.htm" title="「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-21-shadowrocket-node.htm" title="「11月21日」最高速度20.1M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「11月21日」最高速度20.1M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-29-clash-v2ray-ss-ssr.htm" title="「11月29日」最高速度22.5M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「11月29日」最高速度22.5M/S，2025年Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-6-clash-node-daily-updates.htm" title="「12月6日」最高速度18.4M/S，2025年V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「12月6日」最高速度18.4M/S，2025年V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-21-node-share-links.htm" title="「12月21日」最高速度22.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月21日」最高速度22.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-node.htm" title="「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-node.htm" title="「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-free-high-speed-nodes.htm" title="「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-15-free-clash.htm" title="「12月15日」最高速度18.1M/S，2025年SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「12月15日」最高速度18.1M/S，2025年SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-19-free-shadowrocket-node.htm" title="「12月19日」最高速度22.7M/S，2025年Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「12月19日」最高速度22.7M/S，2025年Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
