--- a/date/2025-11/page-3.htm
+++ b/date/2025-11/page-3.htm
@@ -159,16 +159,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-20-clash-node-daily-updates.htm" title="「11月20日」最高速度18.2M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「11月20日」最高速度18.2M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-20-clash-node-daily-updates.htm" title="「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-6-clash-node-daily-updates.htm" title="「12月6日」最高速度18.4M/S，2025年V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「12月6日」最高速度18.4M/S，2025年V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-shadowrocket-node.htm" title="「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-clash-node-daily-updates.htm" title="「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「11月7日」最高速度19.6M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-node.htm" title="「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-24-free-ssr-node.htm" title="「12月24日」最高速度18.4M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「12月24日」最高速度18.4M/S，2025年Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-18-free-high-speed-nodes.htm" title="「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-clash-node.htm" title="「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" title="「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-10-free-shadowrocket-node.htm" title="「12月10日」最高速度18.3M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点每天更新免费节点订阅链接">「12月10日」最高速度18.3M/S，2025年SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-v2ray-subscribe.htm" title="「11月8日」最高速度20.7M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「11月8日」最高速度20.7M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-clash.htm" title="「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-18-node-share.htm" title="「11月18日」最高速度20.5M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「11月18日」最高速度20.5M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-23-free-node-subscribe-links.htm" title="「12月23日」最高速度19.5M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「12月23日」最高速度19.5M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-26-free-clash.htm" title="「11月26日」最高速度21.5M/S，2025年Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「11月26日」最高速度21.5M/S，2025年Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-19-free-subscribe-node.htm" title="「11月19日」最高速度22.9M/S，2025年V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「11月19日」最高速度22.9M/S，2025年V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-subscribe-node.htm" title="「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -180,7 +180,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
