--- a/free-nodes/2025-12-27-clash-node.htm
+++ b/free-nodes/2025-12-27-clash-node.htm
@@ -244,8 +244,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="clearfix"></div>
 <div class="col-md-12 mt-5">
         <p>上一个：<a href="/free-nodes/2025-12-26-shadowrocket-node.htm">「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></p>
+        <p>下一个：<a href="/free-nodes/2025-12-31-free-node-subscribe-links.htm">「12月31日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></p>
     </div>
 <h4>FAQ</h4>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>ShadowsocksR 支持哪些混淆插件？</h5></div>
+    <div class="panel-body">
+        ShadowsocksR 提供多种混淆方式，如 tls1.2_ticket_auth、http_simple、random_head 等。它们通过模拟正常流量特征来规避防火墙检测，使通信更加隐蔽。<hr />    </div>
+</div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>VMess 的 TLS 选项何时使用最合适？</h5></div>
     <div class="panel-body">
@@ -257,14 +263,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         支持。Nekobox 与 Shadowsocks、Clash 等客户端独立运行，互不干扰。用户可通过策略组灵活管理节点，实现多客户端分流和网络优化，提高使用便利性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Hiddify Next 如何实现用户流量分配？</h5></div>
+    <div class="panel-heading"><h5>Mellow 如何配置透明代理？</h5></div>
     <div class="panel-body">
-        管理员可为每个用户设置带宽和流量配额。超出限制时可自动降速或阻止访问，确保服务器资源合理分配，避免单用户占用过多带宽，提高整体网络公平性和效率。<hr />    </div>
+        Mellow 通过 tun2socks 技术实现透明代理。只需在配置文件中启用该功能，系统所有网络流量都会自动转发到代理内核，用户无需手动设置系统代理参数。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>ShadowsocksR 支持哪些混淆插件？</h5></div>
+    <div class="panel-heading"><h5>Clash Premium 与普通版本有什么区别？</h5></div>
     <div class="panel-body">
-        ShadowsocksR 提供多种混淆方式，如 tls1.2_ticket_auth、http_simple、random_head 等。它们通过模拟正常流量特征来规避防火墙检测，使通信更加隐蔽。<hr />    </div>
+        Clash Premium 是增强版，支持更多功能如 TUN 模式、本地 DNS 解析、脚本规则和自定义代理链。它能实现更细致的流量控制和兼容更多协议，适合对网络有高级需求的用户使用。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Trojan-Go 的 MUX 功能能降低延迟吗？</h5></div>
@@ -272,9 +278,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         启用 MUX 后，多条 TCP/QUIC 连接可以共享单个隧道，减少握手次数和连接延迟。对于频繁短连接应用如游戏或社交软件，可以明显提升响应速度。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Clash Premium 与普通版本有什么区别？</h5></div>
+    <div class="panel-heading"><h5>Hiddify Next 如何实现用户流量分配？</h5></div>
     <div class="panel-body">
-        Clash Premium 是增强版，支持更多功能如 TUN 模式、本地 DNS 解析、脚本规则和自定义代理链。它能实现更细致的流量控制和兼容更多协议，适合对网络有高级需求的用户使用。<hr />    </div>
+        管理员可为每个用户设置带宽和流量配额。超出限制时可自动降速或阻止访问，确保服务器资源合理分配，避免单用户占用过多带宽，提高整体网络公平性和效率。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Nekobox 是否支持多客户端节点管理？</h5></div>
+    <div class="panel-body">
+        支持。Nekobox 可以独立管理 Shadowsocks、Clash 等客户端节点，互不干扰。结合策略组，可实现多客户端流量分流和网络优化，提高节点管理效率和使用便利性。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 的多出口策略如何提高网络稳定性？</h5></div>
@@ -284,17 +295,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Sing-box 如何按 IP 段实现智能分流？</h5></div>
     <div class="panel-body">
-        Sing-box 支持根据 IP 段匹配流量，将国内流量直连、国外流量走代理。结合策略组和规则文件，实现精细化流量管理，保证访问速度和稳定性，同时提高节点使用效率。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 如何配置透明代理？</h5></div>
-    <div class="panel-body">
-        Mellow 通过 tun2socks 技术实现透明代理。只需在配置文件中启用该功能，系统所有网络流量都会自动转发到代理内核，用户无需手动设置系统代理参数。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekobox 是否支持多客户端节点管理？</h5></div>
-    <div class="panel-body">
-        支持。Nekobox 可以独立管理 Shadowsocks、Clash 等客户端节点，互不干扰。结合策略组，可实现多客户端流量分流和网络优化，提高节点管理效率和使用便利性。    </div>
+        Sing-box 支持根据 IP 段匹配流量，将国内流量直连、国外流量走代理。结合策略组和规则文件，实现精细化流量管理，保证访问速度和稳定性，同时提高节点使用效率。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -323,16 +324,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-20-clash-node-daily-updates.htm" title="「11月20日」最高速度18.2M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「11月20日」最高速度18.2M/S，2025年Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-node-share.htm" title="「12月2日」最高速度18.5M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点每天更新免费节点订阅链接">「12月2日」最高速度18.5M/S，2025年V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-v2ray-subscribe.htm" title="「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-shadowrocket-node.htm" title="「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-13-free-high-speed-nodes.htm" title="「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" title="「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-12-shadowrocket-node.htm" title="「11月12日」最高速度19.7M/S，2025年SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「11月12日」最高速度19.7M/S，2025年SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-shadowrocket-node.htm" title="「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-19-free-subscribe-node.htm" title="「11月19日」最高速度22.9M/S，2025年V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「11月19日」最高速度22.9M/S，2025年V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-23-clash-v2ray-ss-ssr.htm" title="「11月23日」最高速度22.5M/S，2025年Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「11月23日」最高速度22.5M/S，2025年Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-11-node-share-links.htm" title="「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-9-free-clash-subscribe.htm" title="「12月9日」最高速度21.5M/S，2025年Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接">「12月9日」最高速度21.5M/S，2025年Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-28-node-share-links.htm" title="「11月28日」最高速度19M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「11月28日」最高速度19M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-18-free-high-speed-nodes.htm" title="「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-17-free-v2ray.htm" title="「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-21-node-share-links.htm" title="「12月21日」最高速度22.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月21日」最高速度22.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-16-free-node-subscribe-links.htm" title="「12月16日」最高速度22.2M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「12月16日」最高速度22.2M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-ssr-node.htm" title="「12月14日」最高速度20.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「12月14日」最高速度20.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -344,7 +345,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
