--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -110,6 +110,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2026-01-02">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-1-2-free-clash.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「1月2日」最高速度19.2M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-1-2-free-clash.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「1月2日」最高速度19.2M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、韩国、欧洲、日本、美国、新加坡、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2026-01-01">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2026-1-1-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「1月1日」最高速度18M/S，2025年SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2026-1-1-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「1月1日」最高速度18M/S，2025年SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、美国、加拿大、新加坡、韩国、欧洲、日本等地区,最高速度可达18 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-12-31">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="「12月31日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-12-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月31日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、加拿大、美国、香港、新加坡、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-12-27">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-12-27-clash-node.htm" class="xcblog-blog-url">
@@ -201,47 +240,8 @@
                                     <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-12-20">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-12-20-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-12-20-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月20日」最高速度18.9M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、新加坡、日本、美国、香港等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-12-19">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-12-19-free-shadowrocket-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「12月19日」最高速度22.7M/S，2025年Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-12-19-free-shadowrocket-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月19日」最高速度22.7M/S，2025年Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、美国、香港、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-12-18">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-12-18-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-12-18-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、欧洲、韩国、日本、美国、香港、加拿大等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -251,15 +251,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-11-13-free-high-speed-nodes.htm" title="「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-v2ray-subscribe.htm" title="「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「11月10日」最高速度18.6M/S，2025年Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-clash-subscribe.htm" title="「12月5日」最高速度21.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月5日」最高速度21.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-11-node-share-links.htm" title="「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月11日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" title="「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-18-node-share.htm" title="「11月18日」最高速度20.5M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接">「11月18日」最高速度20.5M/S，2025年SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接">「12月11日」最高速度22.4M/S，2025年Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-18-free-high-speed-nodes.htm" title="「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月18日」最高速度20.3M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-subscribe-node.htm" title="「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-shadowrocket-node.htm" title="「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-clash.htm" title="「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-free-node-subscribe-links.htm" title="「12月31日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接">「12月31日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-7-free-node-subscribe-links.htm" title="「12月7日」最高速度22.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月7日」最高速度22.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-node.htm" title="「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-1-node-share.htm" title="「1月1日」最高速度18M/S，2025年SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「1月1日」最高速度18M/S，2025年SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-free-high-speed-nodes.htm" title="「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-v2ray-subscribe.htm" title="「11月8日」最高速度20.7M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「11月8日」最高速度20.7M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-4-free-shadowrocket-node.htm" title="「12月4日」最高速度19M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「12月4日」最高速度19M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-shadowrocket-node.htm" title="「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
