--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -3,7 +3,7 @@
 
 <head>
         <link rel="canonical" href="https://v2ray-node.github.io/free-nodes/page-5.htm" />
-    <title>V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第4页</title>
+    <title>V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第6页</title>
         <meta name="keywords" content="V2ray Node,免费节点,免费机场订阅,v2ray" />
         <meta name="description" content="V2ray Node官网每日更新最新免费节点分享和稳定机场订阅资源，永久免费高速。" />
         <link rel="icon" href="/assets/website/img/v2ray_node/favicon.ico" type="image/x-icon"/>
@@ -12,7 +12,7 @@
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://v2ray-node.github.io/free-nodes/page-5.htm" />
     <meta property="og:site_name" content="V2ray Node免费节点官网" />
-    <meta property="og:title" content="V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第4页" />
+    <meta property="og:title" content="V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第6页" />
     <meta property="og:image" content="/assets/website/img/v2ray_node/favicon.ico" />
         <meta property="og:description" content="V2ray Node官网每日更新最新免费节点分享和稳定机场订阅资源，永久免费高速。" />
         
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="V2ray Node 免费节点分享 - 稳定机场订阅 - V2ray Node免费节点官网 - 第6页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -110,6 +110,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-11-17">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-11-17-free-v2ray.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-11-17-free-v2ray.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、日本、新加坡、欧洲、美国、加拿大、香港等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-11-15">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-11-15-free-ssr-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「11月15日」最高速度19.1M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-11-15-free-ssr-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月15日」最高速度19.1M/S，2025年V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、美国、韩国、香港、新加坡、欧洲、日本等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-11-14">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-11-14-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/8be83b8774f88a8347879125816b5e62.webp" alt="「11月14日」最高速度19.8M/S，2025年Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-11-14-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月14日」最高速度19.8M/S，2025年Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、加拿大、新加坡、韩国、日本、香港、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-11-13">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-11-13-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -201,34 +240,8 @@
                                     <p>这一次的节点更新覆盖了韩国、欧洲、香港、美国、新加坡、日本、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-11-06">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「11月6日」最高速度22.3M/S，2025年SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月6日」最高速度22.3M/S，2025年SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、日本、韩国、香港、欧洲、新加坡、美国等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-11-05">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-11-5-clash-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/b9df39e5d5485e2cc4800be641032094.webp" alt="「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-11-5-clash-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月5日」最高速度20.9M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、美国、香港、新加坡、韩国、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/free-nodes/page-4.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li class="active"><span>5</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/free-nodes/page-4.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li class="active"><span>5</span></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-6.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -237,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-17-free-high-speed-nodes.htm" title="「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「12月17日」最高速度18.8M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-26-shadowrocket-node.htm" title="「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月26日」最高速度20M/S，2025年Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-17-free-v2ray.htm" title="「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接">「11月17日」最高速度18.8M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-clash.htm" title="「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月8日」最高速度18.9M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-1-shadowrocket-node.htm" title="「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接">「12月1日」最高速度22.1M/S，2025年Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" title="「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月30日」最高速度18.6M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-22-free-ssr-node.htm" title="「12月22日」最高速度21.8M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接">「12月22日」最高速度21.8M/S，2025年SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-node.htm" title="「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「12月27日」最高速度20.5M/S，2025年Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-clash-node.htm" title="「11月22日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接">「11月22日」最高速度21.4M/S，2025年SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-23-free-node-subscribe-links.htm" title="「12月23日」最高速度19.5M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接">「12月23日」最高速度19.5M/S，2025年V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-4-free-shadowrocket-node.htm" title="「12月4日」最高速度19M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接">「12月4日」最高速度19M/S，2025年Clash节点/Shadowrocket节点/Singbox节点/V2ray节点/SSR节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-13-free-high-speed-nodes.htm" title="「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接">「11月13日」最高速度20M/S，2025年Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-12-shadowrocket-node.htm" title="「11月12日」最高速度19.7M/S，2025年SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「11月12日」最高速度19.7M/S，2025年SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-ssr-node.htm" title="「12月14日」最高速度20.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接">「12月14日」最高速度20.1M/S，2025年Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-subscribe-node.htm" title="「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接">「12月25日」最高速度21.1M/S，2025年Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-23-clash-v2ray-ss-ssr.htm" title="「11月23日」最高速度22.5M/S，2025年Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接">「11月23日」最高速度22.5M/S，2025年Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-clash-subscribe.htm" title="「12月5日」最高速度21.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接">「12月5日」最高速度21.1M/S，2025年V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-28-node-share-links.htm" title="「11月28日」最高速度19M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接">「11月28日」最高速度19M/S，2025年SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -258,7 +271,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
